確認画面実装

--- a/app/views/feeds/index.html.erb
+++ b/app/views/feeds/index.html.erb
@@ -18,7 +18,7 @@
       <tr>
         <td><%= feed.user.name %></td>
         <td><%= feed.title %></td>
-        <td><%= feed.image %></td>
+        <td><%= image_tag(feed.image.url) %></td>
         <td><%= feed.content %></td>
         <td><%= link_to 'Show', feed %></td>
         <td><%= link_to 'Edit', edit_feed_path(feed) %></td>
