--- a/app/views/feeds/_form.html.erb
+++ b/app/views/feeds/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: feed, local: true) do |form| %>
+<%= form_with(model: feed, local: true, url: choose_new_or_edit) do |form| %>
   <% if feed.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(feed.errors.count, "error") %> prohibited this feed from being saved:</h2>
@@ -27,7 +27,7 @@
     <!-- アップロードした画像を表示させるための記述 -->
     <%= image_tag(@feed.image.url) if @feed.image && @feed.image.url %>
     <%= form.file_field :image %>
-    <=% from.hidden_field :image_cache %>
+    <=% from.hidden_field :image %>
   </div>
 
   <div class="actions">
