--- a/app/views/feeds/show.html.erb
+++ b/app/views/feeds/show.html.erb
@@ -1,15 +1,12 @@
 <p id="notice"><%= notice %></p>
-
-<p>
-  <tr>
-    <td><%= @feed.user %></td>
-    <td><%= @feed.title %></td>
-    <td><%= @feed.content %></td>
-  </tr>
-  <strong>Image:</strong>
-  <%= image_tag @feed.image.url %>
-</p>
-
+<h1>details</h1>
+  <table>
+    <p>User: <%= @feed.user.name %></p>
+    <p>Title: <%= @feed.title %></p>
+    <p>Content: <%= @feed.content %></p>
+    <p>Image: </p>
+      <%= image_tag @feed.image.url %> 
+  </table>
 
 <%= link_to 'Edit', edit_feed_path(@feed) %> |
 <%= link_to 'Back', feeds_path %>
