css実装・提出

--- a/app/views/feeds/index.html.erb
+++ b/app/views/feeds/index.html.erb
@@ -1,6 +1,7 @@
-<p id="notice"><%= notice %></p>
 
-<h1>Feeds</h1>
+<header class="header">DogBook</header>
+
+<p id="notice"><%= notice %></p>
 
 <table>
   <thead>
@@ -9,12 +10,12 @@
       <th>Title</th>
       <th>Image</th>
       <th>Content</th>
-      <th colspan="3"></th>
+      <th colspan="4"></th>
     </tr>
   </thead>
-
-  <tbody>
-    <% @feeds.each do |feed| %>
+  <article>
+    <div class = "line">
+      <% @feeds.each do |feed| %>
       <tr>
         <td><%= feed.user.name %></td>
         <td><%= feed.title %></td>
@@ -24,10 +25,9 @@
         <td><%= link_to 'Edit', edit_feed_path(feed) %></td>
         <td><%= link_to 'Destroy', feed, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
+    </div>
     <% end %>
-  </tbody>
+  </article>
 </table>
 
-<br>
-
-<%= link_to 'New Feed', new_feed_path %>
+<%= link_to '!!!!!!!!!New Dog!!!!!!!!!', new_feed_path %>
