--- a/app/views/feeds/show.html.erb
+++ b/app/views/feeds/show.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"><%= notice %></p>
-<h1>details</h1>
+<h1>Your Dog</h1>
   <table>
     <p>User: <%= @feed.user.name %></p>
     <p>Title: <%= @feed.title %></p>
