--- a/app/assets/stylesheets/feeds.scss
+++ b/app/assets/stylesheets/feeds.scss
@@ -1,3 +1,36 @@
 // Place all the styles related to the feeds controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.header{
+  font-size:20px;
+  text-align:center;
+}
+
+
+.line {
+  background-color:#F3A7AB;
+  padding: 20px 0 10px 0;
+  width: 100%;
+  color:#fff;
+  position: absolute;
+  
+}
+
+footer {
+  width: 100%;
+  background-color:#2c3e50;
+  padding: 20px 0 10px 0;
+  color: white;
+  margin: auto;
+  padding-bottom: 10px;
+  font-size: 12px;
+  position: absolute;
+  bottom: 0;
+  text-align:center
+}
+
+.login{
+  font-size:20px;
+  text-align:center;
+}
