--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,13 +3,14 @@
   <head>
     <title>Dogbook</title>
     <%= csrf_meta_tags %>
+    <meta name="viewport" content="width=device-width"> 
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
+
         <% flash.each do |key, value| %>
       <%= content_tag(:div, value, class: "#{key}") %>
     <% end %>
@@ -23,5 +24,11 @@
     <% end %>
     
     <%= yield %>
+
+      <footer>
+    <p>運営会社　Dogbook 株式会社</p>
+    <p>© 2015-2016 Copyright Dogs Corp.</p>
+  </footer>
+
   </body>
 </html>
