--- a/app/views/feeds/index.html.erb
+++ b/app/views/feeds/index.html.erb
@@ -1,33 +1,30 @@
-
+<% if logged_in? %>
 <header class="header">DogBook</header>
 
-<p id="notice"><%= notice %></p>
-
+<p id="notice"></p>
+<strong><%= link_to '!!!!!!!!!投稿する!!!!!!!!!', new_feed_path %></strong>
 <table>
   <thead>
     <tr>
-      <th>User</th>
-      <th>Title</th>
-      <th>Image</th>
-      <th>Content</th>
-      <th colspan="4"></th>
+      <th>ユーザー  </th>
+      <th>タイトル  </th>
+      <th>画像  </th>
+      <th>内容  </th>
     </tr>
   </thead>
   <article>
-    <div class = "line">
-      <% @feeds.each do |feed| %>
+  <% @feeds.each do |feed| %>
       <tr>
         <td><%= feed.user.name %></td>
         <td><%= feed.title %></td>
         <td><%= image_tag(feed.image.url) %></td>
         <td><%= feed.content %></td>
-        <td><%= link_to 'Show', feed %></td>
-        <td><%= link_to 'Edit', edit_feed_path(feed) %></td>
-        <td><%= link_to 'Destroy', feed, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to '詳細', feed %></td>
+        <td><%= link_to '編集', edit_feed_path(feed) %></td>
+        <td><%= link_to '削除', feed, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
-    </div>
+    </#div>
     <% end %>
   </article>
 </table>
-
-<%= link_to '!!!!!!!!!New Dog!!!!!!!!!', new_feed_path %>
+<% end %>
