--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,3 +14,33 @@
  *= require_tree .
  *= require_self
  */
+
+footer {
+  width: 100%;
+  background-color:#2c3e50;
+  padding: 20px 0 10px 0;
+  color: white;
+  margin: auto;
+  padding-bottom: 10px;
+  font-size: 10px;
+  bottom: 0;
+  text-align:center
+}
+
+.login{
+  font-size:10px;
+  text-align:center;
+}
+
+header{
+  width: 100%;
+  background-color:#2c3e50;
+  padding: 50px 0 0px 0;
+  color: white;
+  font-size: 30px;
+  text-align:center;
+}
+
+
+
+
