--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,11 +1,11 @@
-body {
-  background-color: #fff;
-  color: #333;
-  margin: 33px;
-  font-family: verdana, arial, helvetica, sans-serif;
-  font-size: 13px;
-  line-height: 18px;
-}
+// body {
+//   background-color: #fff;
+//   color: #333;
+//   margin: 33px;
+//   font-family: verdana, arial, helvetica, sans-serif;
+//   font-size: 13px;
+//   line-height: 18px;
+// }
 
 p, ol, ul, td {
   font-family: verdana, arial, helvetica, sans-serif;
@@ -19,9 +19,9 @@ pre {
   font-size: 11px;
 }
 
-a {
+strong {
   color: #000;
-
+  text-align: center;
   &:visited {
     color: #666;
   }
@@ -37,12 +37,14 @@ th {
 }
 
 td {
-  padding: 0 5px 7px;
+  padding: 0 10px 10px;
+  font-size: 15px;
 }
 
 div {
   &.field, &.actions {
     margin-bottom: 10px;
+    color: black;;
   }
 }
 
@@ -62,23 +64,13 @@ div {
   padding: 7px 7px 0;
   margin-bottom: 20px;
   background-color: #f0f0f0;
+}
 
-  h2 {
-    text-align: left;
-    font-weight: bold;
-    padding: 5px 5px 5px 15px;
-    font-size: 12px;
-    margin: -7px -7px 0;
-    background-color: #c00;
-    color: #fff;
-  }
+h1{
+  font-size: 20px;
+}
 
   ul li {
     font-size: 12px;
     list-style: square;
   }
-}
-
-label {
-  display: block;
-}
