--- a/app/views/feeds/confirm.html.erb
+++ b/app/views/feeds/confirm.html.erb
@@ -5,12 +5,12 @@
   <%= form.hidden_field :image_cache %>
   <%= form.hidden_field :title %>
   <%= form.hidden_field :content %>
-  <%= form.submit "投稿する" %>
+  <th><%= form.submit "投稿する" %></th>
 <% end %>
 
 <%= form_with(model:@feed, url:new_feed_path, local:true, method:"get") do |form| %>
   <%= form.hidden_field :image_cache %>
   <%= form.hidden_field :title %>
   <%= form.hidden_field :content %>
-  <%= form.submit "戻る", name: "back" %>
+  <th><%= form.submit "投稿一覧へ", name: "back" %></th>
 <% end %>
