--- a/app/views/feeds/edit.html.erb
+++ b/app/views/feeds/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Edit</h1>
+<h1>編集</h1>
 
 <%= render 'form', feed: @feed %>
 
-<%= link_to 'Show', @feed %> |
-<%= link_to 'Back', feeds_path %>
+<%= link_to '詳細', @feed %> |
+<%= link_to '投稿一覧へ', feeds_path %>
