--- a/app/views/feeds/show.html.erb
+++ b/app/views/feeds/show.html.erb
@@ -1,12 +1,12 @@
-<p id="notice"><%= notice %></p>
-<h1>Your Dog</h1>
+<p id="notice"></p>
+<h1>投稿詳細</h1>
   <table>
-    <p>User: <%= @feed.user.name %></p>
-    <p>Title: <%= @feed.title %></p>
-    <p>Content: <%= @feed.content %></p>
-    <p>Image: </p>
+    <p>ユーザー: <%= @feed.user.name %></p>
+    <p>タイトル: <%= @feed.title %></p>
+    <p>内容: <%= @feed.content %></p>
+    <p>画像: </p>
       <%= image_tag @feed.image.url %> 
   </table>
 
-<%= link_to 'Edit', edit_feed_path(@feed) %> |
-<%= link_to 'Back', feeds_path %>
+<%= link_to '編集する', edit_feed_path(@feed) %> |
+<%= link_to '投稿一覧へ', feeds_path %>
