--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,34 +1,30 @@
 <!DOCTYPE html>
 <html>
-  <head>
+  <header>
     <title>Dogbook</title>
     <%= csrf_meta_tags %>
     <meta name="viewport" content="width=device-width"> 
     <%= csp_meta_tag %>
-
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
-
-
-        <% flash.each do |key, value| %>
-      <%= content_tag(:div, value, class: "#{key}") %>
-    <% end %>
-
-        <% if logged_in? %>
+  </header>
+  <body>
+  <% flash.each do |key, value| %>
+    <%= content_tag(:div, value, class: "#{key}") %>
+  <% end %>
+    <% if logged_in? %>
       <%= link_to "Profile", user_path(current_user.id) %>
       <%= link_to "Logout", session_path(current_user.id), method: :delete %>
     <% else %>
       <%= link_to "Sign up", new_user_path %>
       <%= link_to "Login", new_session_path %>
     <% end %>
-    
-    <%= yield %>
 
-      <footer>
+  <%= yield %>
+  </footer>
+  </body>
+  <footer>
     <p>運営会社　Dogbook 株式会社</p>
     <p>© 2015-2016 Copyright Dogs Corp.</p>
   </footer>
-
-  </body>
 </html>
