--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,10 @@
-<h1><%= @user.name %>のページ</h1>
+<h1><%= @user.name %>のアカウント</h1>
 
 <p>Email: <%= @user.email %></p>
 
-<%= link_to 'Back', feeds_path %>
+<% if logged_in? %>
+<%= link_to '投稿一覧へ', feeds_path(@user.id) %>
+<% else %>
+<%= link_to "Login", new_session_path %>
+<% end %>
+
