--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -24,7 +24,8 @@ footer {
   padding-bottom: 10px;
   font-size: 10px;
   bottom: 0;
-  text-align:center
+  text-align:center;
+  position:absolute;
 }
 
 .login{
@@ -39,6 +40,7 @@ header{
   color: white;
   font-size: 30px;
   text-align:center;
+
 }
 
 
